[package]
name = "bevy-game-jam"
author = "Sammy Khamis"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 's'
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
rand = "0.7.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!